--- a/openfisca_pf/tests/daf/redevance_domaniale/tests_unitaires/controle_emprise_type_2.yaml
+++ b/openfisca_pf/tests/daf/redevance_domaniale/tests_unitaires/controle_emprise_type_2.yaml
@@ -9,7 +9,7 @@
       activite_cultuelle: false
       nombre_unite_redevance_domaniale: 2
       variable_redevance_domaniale: 100
-      commune_redevance_domaniale: 350
+      commune_redevance_domaniale: com350
       zone_domaine_prive: sainte_amelie_quartier_des_institutions 
       nombre_participant_redevance_domaniale: 0
   output:
@@ -28,7 +28,7 @@
       activite_cultuelle: false
       nombre_unite_redevance_domaniale: 2
       variable_redevance_domaniale: 100
-      commune_redevance_domaniale: 350
+      commune_redevance_domaniale: com350
       zone_domaine_prive: sainte_amelie_quartier_des_institutions 
       nombre_participant_redevance_domaniale: 0
   output:
@@ -47,7 +47,7 @@
       activite_cultuelle: false
       nombre_unite_redevance_domaniale: 2
       variable_redevance_domaniale: 100
-      commune_redevance_domaniale: 350
+      commune_redevance_domaniale: com350
       zone_domaine_prive: sainte_amelie_quartier_des_institutions 
       nombre_participant_redevance_domaniale: 0
   output:
@@ -66,7 +66,7 @@
       activite_cultuelle: false
       nombre_unite_redevance_domaniale: 2
       variable_redevance_domaniale: 100
-      commune_redevance_domaniale: 350
+      commune_redevance_domaniale: com350
       zone_domaine_prive: sainte_amelie_quartier_des_institutions 
       nombre_participant_redevance_domaniale: 0
   output:
@@ -85,7 +85,7 @@
       activite_cultuelle: false
       nombre_unite_redevance_domaniale: 2
       variable_redevance_domaniale: 100
-      commune_redevance_domaniale: 350
+      commune_redevance_domaniale: com350
       zone_domaine_prive: sainte_amelie_quartier_des_institutions 
       nombre_participant_redevance_domaniale: 0
   output:
@@ -104,12 +104,12 @@
       activite_cultuelle: false
       nombre_unite_redevance_domaniale: 2
       variable_redevance_domaniale: 100
-      commune_redevance_domaniale: 350
+      commune_redevance_domaniale: com350
       zone_domaine_prive: sainte_amelie_quartier_des_institutions 
       nombre_participant_redevance_domaniale: 0
   output:
-    montant_total_redevance_domaniale: 100000
-    montant_base_redevance_domaniale: 100000
+    montant_total_redevance_domaniale: 50000
+    montant_base_redevance_domaniale: 50000
     type_calcul_redevance_domaniale: 2
     # temporalite_redevance_domaniale: Journalier
 - name: Test 7 - im_eco_07_vente_produit_locaux_aero
@@ -123,7 +123,7 @@
       activite_cultuelle: false
       nombre_unite_redevance_domaniale: 2
       variable_redevance_domaniale: 100
-      commune_redevance_domaniale: 350
+      commune_redevance_domaniale: com350
       zone_domaine_prive: sainte_amelie_quartier_des_institutions 
       nombre_participant_redevance_domaniale: 0
   output:
@@ -142,7 +142,7 @@
       activite_cultuelle: false
       nombre_unite_redevance_domaniale: 2
       variable_redevance_domaniale: 100
-      commune_redevance_domaniale: 350
+      commune_redevance_domaniale: com350
       zone_domaine_prive: sainte_amelie_quartier_des_institutions 
       nombre_participant_redevance_domaniale: 0
   output:
@@ -161,7 +161,7 @@
       activite_cultuelle: false
       nombre_unite_redevance_domaniale: 2
       variable_redevance_domaniale: 100
-      commune_redevance_domaniale: 350
+      commune_redevance_domaniale: com350
       zone_domaine_prive: sainte_amelie_quartier_des_institutions 
       nombre_participant_redevance_domaniale: 0
   output:
@@ -180,7 +180,7 @@
       activite_cultuelle: false
       nombre_unite_redevance_domaniale: 2
       variable_redevance_domaniale: 100
-      commune_redevance_domaniale: 350
+      commune_redevance_domaniale: com350
       zone_domaine_prive: sainte_amelie_quartier_des_institutions 
       nombre_participant_redevance_domaniale: 0
   output:
@@ -199,7 +199,7 @@
       activite_cultuelle: false
       nombre_unite_redevance_domaniale: 2
       variable_redevance_domaniale: 100
-      commune_redevance_domaniale: 350
+      commune_redevance_domaniale: com350
       zone_domaine_prive: sainte_amelie_quartier_des_institutions 
       nombre_participant_redevance_domaniale: 0
   output:
@@ -218,7 +218,7 @@
       activite_cultuelle: false
       nombre_unite_redevance_domaniale: 2
       variable_redevance_domaniale: 100
-      commune_redevance_domaniale: 350
+      commune_redevance_domaniale: com350
       zone_domaine_prive: sainte_amelie_quartier_des_institutions 
       nombre_participant_redevance_domaniale: 0
   output:
@@ -237,7 +237,7 @@
       activite_cultuelle: false
       nombre_unite_redevance_domaniale: 2
       variable_redevance_domaniale: 100
-      commune_redevance_domaniale: 350
+      commune_redevance_domaniale: com350
       zone_domaine_prive: sainte_amelie_quartier_des_institutions 
       nombre_participant_redevance_domaniale: 0
   output:
@@ -256,7 +256,7 @@
       activite_cultuelle: false
       nombre_unite_redevance_domaniale: 2
       variable_redevance_domaniale: 100
-      commune_redevance_domaniale: 350
+      commune_redevance_domaniale: com350
       zone_domaine_prive: sainte_amelie_quartier_des_institutions 
       nombre_participant_redevance_domaniale: 0
   output:
