New pricing for agriculture purpose

--- a/openfisca_pf/parameters/daf/redevance_domaniale/type_calcul.yaml
+++ b/openfisca_pf/parameters/daf/redevance_domaniale/type_calcul.yaml
@@ -291,3 +291,8 @@ priv_08_cultuel:
 priv_09_autres:
   values:
     2018-01-01: 9
+
+# Type 10
+ag_priv_06_lotissement:
+  values:
+    2018-01-01: 10
